src/test/deca/context/valid/with_object/class_object.deca
{
    Object o = new Object();
    (Object) (o);
    Object o2 = (Object) (o);
}