src/test/deca/context/invalid/oracle/assign_compatible_other.deca
class Animal{
    int x, y;
}

class Car{
    int speed;
}

{
    Animal animal =  new Car();
}